# scout

./: .gitignore  README.md  config.example.yml  last_run.json  pyproject.toml  requirements.txt
.github/workflows/: daily-digest.yml
design/: paper-scout-design.md
digests/: scout-2026-04-04.md  scout-2026-04-05.md  scout-2026-04-06.md  scout-2026-04-07.md  scout-2026-04-08.md  scout-2026-04-11.md  scout-2026-04-12.md  scout-2026-04-13.md  scout-2026-04-14.md  scout-2026-04-16.md  scout-2026-04-18.md  scout-2026-04-19.md  scout-2026-04-20.md  scout-2026-04-21.md  scout-2026-04-23.md  scout-2026-04-24.md  scout-2026-04-25.md  scout-2026-04-26.md  scout-2026-04-27.md  scout-2026-04-28-aisi.md  scout-2026-04-28.md  scout-2026-04-29.md  scout-2026-04-30.md  scout-2026-05-02.md  scout-2026-05-03.md  scout-2026-05-04.md  scout-2026-05-06.md  scout-2026-05-10.md
docs/: homelab-cron.md
kb_output/papers/: novel-memory-forgetting-techniques-for-autonomous-ai.md  skill0-in-context-agentic-reinforcement-learning-for-skill.md
knowledge_base/: papers.json  topics.json
paper_scout/: __init__.py  cli.py  config.py  costs.py  deep_reader.py  digest.py  feedback.py  fetcher.py  kb_writer.py  knowledge_base.py  models.py  scorer.py  semantic_scholar.py  state.py  summarizer.py  watchlist.py  web_fetcher.py
paper_scout/delivery/: __init__.py  base.py  discord.py  (+3 more)
scripts/: run-homelab-digest.sh
tests/: test_cli_ranking.py  test_config.py  test_delivery.py  test_digest.py  test_feedback.py  test_fetcher.py  test_kb_writer.py  test_scorer.py  test_state.py  test_web_fetcher.py
(+2 files in other folders)
