[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout"
version = "0.1.0"
description = "Personalized arXiv digest agent powered by Anthropic Claude."
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.45.0",
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "jinja2>=3.1",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
]

[project.scripts]
scout = "paper_scout.cli:main"

[tool.setuptools.packages.find]
include = ["paper_scout*"]

[tool.setuptools.package-data]
paper_scout = ["templates/*.j2"]